[tool.poetry]
name = "shiro"
version = "0.2.2"
description = "JOSE implementation for Python."
authors = ["Eduardo Rezende <eduardorbr7@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/revensky/shiro"
repository = "https://github.com/revensky/shiro.git"
keywords = [
    "JOSE",
    "Json Web Signature",
    "Json Web Encryption",
    "Json Web Key",
    "Json Web Token"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
packages = [{ include = "shiro", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^3.1.1"
fulldict = "^0.1.0"
"revensky.webtools" = "^1.0.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
Sphinx = "^3.2.1"
sphinx-rtd-theme = "^0.5.0"
rstcheck = "^3.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
